# lark_bot_sdk

./: .gitguardian.yaml  .gitignore  Cargo.toml  README.md  gen_doc.bash  test.bash
.github/workflows/: ci.yml  doc.yml
examples/: build_client.rs  do_req.rs  download_file.rs  mock_do_req.rs  mock_send_message.rs  send_message.rs  upload_file.rs
gen_api/: Cargo.toml  api.tpl  download_api.tpl  gen.bash  service.tpl  test_data_fix.csv  upload_api.tpl
gen_api/src/: helper.rs  main.rs  main_backup.rs  model.rs
lark_macros/: Cargo.toml
lark_macros/src/: lib.rs
source/: loadpagefind.js  pagefind.html
src/: error.rs  lib.rs
src/api/: mod.rs
src/api/auth/: get_app_access_token.rs  get_auth_app_ticket.rs  get_tenant_access_token.rs  mod.rs  service.rs
src/api/message/: mod.rs
src/core/: http_client.rs  impl_request.rs  impl_request_mock.rs  mocker.rs  mod.rs  model.rs  store.rs
src/utils/: serde_helper.rs
