[package]
name = "gen_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"
heck = "0.5"
rust-format = "0.3"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
scraper = "0.19"
csv = "1.3"
