[package]
name = "lark_bot_sdk_macros"
version = "0.1.0"
edition = "2021"
authors = ["booiris02@gmail.com"]
license = "MIT"
readme = "../README.md"
repository = ""
documentation = ""
description = "rust lark bot sdk macros"
keywords = ["lark", "macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = true
